--- a/buy-sus-app/src/App.css
+++ b/buy-sus-app/src/App.css
@@ -11,17 +11,20 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+  .Spin-move {
+    animation: App-logo-spin infinite 10s linear;
+  }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #c5ffe7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .App-link {
